# MolSAICV4

./: .gitignore  .gitmodules  DevDoc.md  README.md  pyproject.toml  pytest.ini
docs/: ACCEPTANCE.md  ADAPTER_CONTRACT.md  EXTENSIBILITY.md  HYDRATION_AS2.md  MOLSAIC_FIT_AND_USAGE.md  PARITY_AND_DECOMMISSION.md  PLAN_V3.md  QUICKSTART.md  README.md  REPO_FIT_AND_MXENES_WORKFLOWS.md  USM_FIT_AND_USAGE.md  USM_IMPROVEMENT_PLAN.md  WORKFLOWS.md  ions-in-water-workflows.md  manifest.v1.schema.json  usm_lb_sf_carmdf_v1.md
docs/DevGuides/: DevGuide_v0.1.1.md  v0.1.1_report.md
docs/getting-started/: ONBOARDING_USM_UPM_MOLSAIC.md  QUICKSTART.md  WORKFLOWS.md
docs/methods/: MSI2LMP_FRC_REQUIREMENTS.md  TERMSET_FRC_PIPELINE.md
docs/plans/: TRICLINIC_MXENE_SUPERCELL_PLAN.md
docs/reference/: MOLSAIC_FIT_AND_USAGE.md  USM_FIT_AND_USAGE.md  manifest.v1.schema.json  msi2lmp_standalone_usage.md
docs/usm_enhancements/: GENERAL_LATTICE_SUPPORT.md
docs/workflows/: ITERATIVE_DEVELOPMENT_PLAYBOOK.md  REPO_FIT_AND_MXENES_WORKFLOWS.md  ions-in-water-workflows.md
plans/: README.md  REFACTOR_PLAN.md  docs_reorganization_plan.md  extreme_validation_calf20_co2.md  frc_builder_from_existing.md  migrate_frc_from_scratch.md  minimal_frc_builder_implementation.md  minimal_frc_workspace_wiring.md  msi2lmp_minimal_frc_debug_plan.md  phase13_cleanup_refactor.md  phase14_unified_frc_builder.md  phase15_workspace_migration.md  phase16_4_frc_validation.md  phase16_combined_mof_co2.md  phase18_bond_increments_remediation.md  phase19_bond_connectivity_remediation.md  subtask2_frc_input_design.md  subtask3_frc_writer_design.md  subtask5_deprecated_code_cleanup.md  subtask5b_msi2lmp_segfault_analysis.md  v0.1_calf20_co2_diffusion_reference.md
scripts/: check_max_lines.py  ion_counts.py  make_ion_free_templates.py
src/molsaic/: __init__.py  manifest_utils.py  workspaces.py
src/pm2mdfcar/: __init__.py  _builders.py  _formatters.py  _legacy_parsers.py  _models.py  _parsers.py  _writers.py
src/pm2msi/: CELL_PROPAGATION.md  README.md  __init__.py  __main__.py  cli.py  config.py  core.py  packmol_template.inp  validation.py
tests/: __init__.py  _manifest_schema_lite.py
tests/integration/: test_golden_usm_upm_msi2lmp_pipeline.py  test_hydration_workspaces.py  test_ions_workspaces.py  test_nist_supercell.py  test_triclinic_mxene_supercell.py  test_workspace_03_termset_parameterset_determinism.py  test_workspace_nist_calf20_msi2lmp_unbonded_determinism.py
tests/unit/: test_adapter_contract.py  test_lattice.py  test_lmp_triclinic.py  test_mdf_formal_charge_tokens.py  test_mdf_periodic_bonds.py  (+7 more)
(+120 files in other folders)
