[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsaic"
version = "0.0.1"
description = "MolSAIC V3 orchestrator pipelines and adapters."
requires-python = ">=3.9"
authors = [{ name = "MolSAIC Authors" }]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
]

[project.urls]
Homepage = "https://example.com/molsaic"
Repository = "https://example.com/molsaic/repo"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
