[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsaic"
version = "0.0.1"
description = "MolSAIC V4 deterministic orchestrator pipelines and adapters."
requires-python = ">=3.9"
authors = [{ name = "MolSAIC Authors" }]
dependencies = [
  "numpy>=1.22",
  "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/fl-sean03/MolSAICV4"
Repository = "https://github.com/fl-sean03/MolSAICV4.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
# UPM is a standalone package (submodule) and is installed separately via:
#   python -m pip install -e ./src/upm
exclude = ["upm", "upm.*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
