[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsaic"
version = "2.0.0"
description = "MolSAIC V4 — deterministic orchestrator for atomistic structure pipelines"
requires-python = ">=3.10"
authors = [{ name = "MolSAIC Authors" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/fl-sean03/MolSAICV4"
Repository = "https://github.com/fl-sean03/MolSAICV4.git"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["molsaic", "molsaic.*", "external", "external.*", "pm2mdfcar", "pm2mdfcar.*", "pm2msi", "pm2msi.*"]
# USM and UPM are standalone packages (submodules) installed separately:
#   pip install -e ./src/usm
#   pip install -e ./src/upm

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F"]
